--- a/public/assets/views/pages/aidealapose.html
+++ b/public/assets/views/pages/aidealapose.html
@@ -1,11 +1,9 @@
-<div class="container mb-2 pt-2 pb-2">
-    <h1>Besoin d'aide ?</h1>
-    <div class="h3">Nos professionnels sont la pour vous aider !</div>
-    <div class="columns col-10 col-mx-autp">
-        <div class="column col-6"><img src="assets/images/aucune-image.png"></div>
-        <div class="column col-6">
-lorem ipsum
+<h1 class="mb-2 pt-2 pb-2">Besoin d'aide ?</h1>
+<div class="h3">Nos professionnels vous fournisse une notice complète d'installation !</div>
+<div class="columns col-10 col-mx-autp">
+    <div class="column col-6"><img src="assets/images/aucune-image.png"></div>
+    <div class="column col-6">
+        lorem ipsum
 
-        </div>
     </div>
 </div>
