--- a/public/assets/views/pages/quisommesnous.html
+++ b/public/assets/views/pages/quisommesnous.html
@@ -1,18 +1,21 @@
-<div class="container mb-2 pt-2 pb-2">
-    <h1 >Qui sommes nous ?</h1>
+<div class=" mb-2 pt-2 pb-2">
+    <h1>Qui sommes nous ?</h1>
     <div class="columns col-10 col-mx-autp">
         <div class="column col-6"><img src="assets/images/aucune-image.png"></div>
         <div class="column col-6">
-            <div class="h4 pb-2">Un groupe fondé il y a 25 ans</div>
-            <div class="pt-2 pb-2">Fondée en 1994, L’entreprise COPROMETAL SA équipe, protège et occulte vos propriétés à travers
+            <div class="h4 pb-2">Un groupe fondé il y a 25 ans..</div>
+            <div class="pt-2 pb-2">Fondée en 1994, L’entreprise COPROMETAL SA équipe, protège et occulte vos propriétés
+                à travers
                 notre gamme de clôtures et kits d’occultation.
             </div>
 
-            <div class="pt-2 pb-2"> Propulsée par 25 années d’expériences sur ce marché, COPROMETAL SA saura répondre à vos
+            <div class="pt-2 pb-2"> Propulsée par 25 années d’expériences sur ce marché, COPROMETAL SA saura répondre à
+                vos
                 questions, mais aussi à vos exigences qualitatives.
             </div>
 
-            <div class="pt-2 pb-2"> Incontournable sur le marché de la clôture rigide avec notre couverture nationale, nous vous
+            <div class="pt-2 pb-2"> Incontournable sur le marché de la clôture rigide avec notre couverture nationale,
+                nous vous
                 proposons une
                 offre complète adaptée à votre budget. Que vous soyez professionnel ou particulier, nos experts sont là
                 pour
@@ -24,7 +27,7 @@
             <div class="pt-2 pb-2"> Un service client ultra rapide & disponible
                 Besoin d’un conseil ? Nos équipes sont à votre disposition pour la moindre question, par téléphone au 05
                 53
-                70 70 70, par mail à l’adresse suivante commercial@greencloture.fr ou via notre chat intégré.
+                70 70 70, par mail à l’adresse suivante <a class="link " href="mailto:commercial@cloturesfrancaises.fr">commercial@cloturesfrancaises.fr</a> ou via notre chat intégré.
             </div>
 
         </div>
