--- a/public/assets/views/parts/footer.html
+++ b/public/assets/views/parts/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container col-12 footer">
         <div class="columns">
-            <div class="column text-center col-4 col-sm-auto col-mx-auto">
+            <div class="column  col-4 col-sm-auto col-mx-auto">
                 <div class="h3">Nous contacter</div>
                 <ul class="unstyled mt-4">
                     <li class="mt-2 mb-2 text-left">
@@ -26,13 +26,14 @@
                 </ul>
 
             </div>
-            <div class="column col-auto text-center">
+            <div class="column col-auto">
                 <div class="h3">Liens utiles</div>
 
                 <ul class="unstyled mt-2 text-left">
                     <li class="mt-2"><a class="btn btn-link link" href="#qui-sommes-nous">Qui sommes nous ?</a></li>
                     <li class=""><a class="btn btn-link link" href="#service-de-livraison">Service de Livraison</a></li>
-                    <li class=""><a class="btn btn-link link" href="#conditions-generales-de-ventes">Conditions Générales
+                    <li class=""><a class="btn btn-link link" href="#conditions-generales-de-ventes">Conditions
+                        Générales
                         de Ventes</a></li>
                     <li class=""><a class="btn btn-link link" href="#mentions-legales">Mentions Légales</a></li>
                     <li class=""><a class="btn btn-link link" href="#politique-de-confidentialite">Politique de
@@ -45,15 +46,22 @@
                 <div class="h3">Découvrez notre autre site</div>
 
                 <ul class="unstyled mt-2">
-                    <li class="mt-2"><a class="link " href="https://le-portailfrancais.fr/" target="_blank"><img src="assets/images/le-portail-francais-logo.png" alt="" style="width: 130px;"></a></li>
-                    <li class="mt-2"><a class="link " href="https://www.levoletfrancais.fr/" target="_blank"><img src="assets/images/logo_lvf-HD-150.png" alt="" style="width: 130px;"></a></li>
+                    <li class="mt-2"><a class="link " href="https://le-portailfrancais.fr/" target="_blank"><img
+                            src="assets/images/logo-le-portail-francais-noir.png" alt="" style="width: 130px;"></a></li>
+                    <li class="mt-2"><a class="link " href="https://www.levoletfrancais.fr/" target="_blank"><img
+                            src="assets/images/logo_lvf-HD-150.png" alt="" style="width: 130px;"></a></li>
 
                 </ul>
 
             </div>
         </div>
+
+<!--        <div class="text-center bandeau col-7 m-auto"> Tous droits réservés © 2020 Clotures Françaises Une marque appartenant au groupe-->
+<!--            Coprometal.-->
+<!--        </div>-->
         <div class="text-center"> Tous droits réservés © 2020 Clotures Françaises Une marque appartenant au groupe
-            Coprometal. </div>
+            Coprometal.
+        </div>
     </div>
 
 </footer>
