--- a/public/assets/views/pages/contact.html
+++ b/public/assets/views/pages/contact.html
@@ -1,11 +1,17 @@
 <div class="container">
     <div class="h3 text-center pb-2">Pour toute demande de renseignements, veuillez remplir le formulaire ci-dessous.
     </div>
-    </br></br></br>
+    <div class="h5 text-italic text-center">Particulier ou professionnel , notre service commercial se tient à votre
+        écoute...
+    </div>
     <div class="col-10 col-md-12 p-centered">
         <form id="contact">
-            <div class="col-12 m-auto">
-                <div class=" col-10 m-auto ">
+            <div class="col-12 m-auto columns">
+                <div class="col-6 column border">
+                    <div id="mapid"></div>
+                </div>
+                <div class=" col-6 m-auto column">
+
                     <div class="pb-2 pt-2 "><input class="form-input col-12" type="email" id="mail"
                                                    placeholder="Votre adresse Email"></div>
                     <div class="pb-2 pt-2 "><input class="form-input pb-2 pt-2 col-12" type="text" id="nom"
@@ -30,4 +36,6 @@
     </div>
 
 </div>
+
+
 
