--- a/public/assets/views/pages/home.html
+++ b/public/assets/views/pages/home.html
@@ -1,4 +1,5 @@
-<h1 class="pt-2">Clôtures Françaises<sup><img class="pr-2 mr-2"src="assets/images/logofr.png" alt="" style="width: 45px;"></sup></h1>
+<h1 class="mb-2 pt-2 pb-2">Clôtures Françaises<sup><img class="pr-2 mr-2" src="assets/images/logofr.png" alt=""
+                                                        style="width: 45px;"></sup></h1>
 <span class=" h3 pb-2">Bienvenue !</span>
 <div class="columns pt-2">
     <div class="col-10 col-mx-auto pb-2 pt-2">
