--- a/public/assets/views/pages/nos_clotures.html
+++ b/public/assets/views/pages/nos_clotures.html
@@ -1,60 +1,64 @@
-<div class="columns productsCategory">
-    <div class="column col-12 mb-2 pt-2 pb-2">
-        <div class="columns">
-            <div class="column  p-centered mb-2 pb-2">
-                <h1 >Nos kits de clôtures<sup><img class="pr-2 mr-2"src="assets/images/logofr.png" alt="" style="width: 45px;"></sup></h1>
+<div class="productsCategory">
+    <div class="mb-2 pt-2 pb-2">
+        <div>
+            <div class=" mb-2 pb-2">
+                <h1>Nos kits de clôtures<sup><img class="pr-2 mr-2" src="assets/images/logofr.png" alt=""
+                                                  style="width: 45px;"></sup></h1>
                 <div class="desc">Découvrez notre configurateur en ligne...</div>
             </div>
         </div>
     </div>
 
-    <div class="column col-12 col-lg-12">
-        <div class=" columns m-2 justify-around">
+
+    <div class="columns col-12 m-2 justify-around">
 
 
-            <a href="#config-persienne" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <div class="h2 productName">Lame persienne</div>
-                <div class="h4 productPrice mb-2"> <small>A partir de</small> 57.40 €</div>
-                <img src="assets/images/cloture-aluminium-lame-persienne.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="columns col-12">
-                    <button class="btn btn-primary  m-auto">
-                        <svg class="feather mr-1">
-                            <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
-                        </svg>
-                        En savoir plus
-                    </button>
-                </div>
+        <a href="#config-persienne" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
+            <div class="h2 productName">Lame persienne</div>
+            <div class="h4 productPrice mb-2"><small>A partir de</small> 57.40 €</div>
+            <img src="assets/images/cloture-aluminium-lame-persienne.png"
+                 class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+            <div class="columns col-12">
+                <button class="btn btn-primary  m-auto">
+                    <svg class="feather mr-1">
+                        <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
+                    </svg>
+                    En savoir plus
+                </button>
+            </div>
 
-            </a>
-            <div class="divider-vert"></div>
-            <a href="#config-lame-large" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <div class="h2 productName ">Lame large</div>
-                <div class="h4 productPrice mb-2 "> <small>A partir de</small> 70.30 €</div>
-                <img src="assets/images/cloture-aluminium-lame-large.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="columns col-12">
-                    <button class="btn btn-primary  m-auto">
-                        <svg class="feather mr-1">
-                            <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
-                        </svg>
-                        En savoir plus
-                    </button>
-                </div>
-            </a>
-            <div class="divider-vert"></div>
-            <a href="#config-claire-voie" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <div class="h2 productName ">Claire voie</div>
-                <div class="h4 productPrice mb-2 "> <small>A partir de</small> 55.65 €</div>
-                <img src="assets/images/cloture-aluminium-lame-pleine.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="columns col-12">
-                    <button class="btn btn-primary  m-auto">
-                        <svg class="feather mr-1">
-                            <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
-                        </svg>
-                        En savoir plus
-                    </button>
-                </div>
-            </a>
-        </div>
+        </a>
+        <div class="divider-vert"></div>
+        <a href="#config-lame-large" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
+            <div class="h2 productName ">Lame large</div>
+            <div class="h4 productPrice mb-2 "><small>A partir de</small> 70.30 €</div>
+            <img src="assets/images/cloture-aluminium-lame-large.png"
+                 class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+            <div class="columns col-12">
+                <button class="btn btn-primary  m-auto">
+                    <svg class="feather mr-1">
+                        <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
+                    </svg>
+                    En savoir plus
+                </button>
+            </div>
+        </a>
+        <div class="divider-vert"></div>
+        <a href="#config-claire-voie" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
+            <div class="h2 productName ">Claire voie</div>
+            <div class="h4 productPrice mb-2 "><small>A partir de</small> 55.65 €</div>
+            <img src="assets/images/cloture-aluminium-lame-pleine.png"
+                 class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+            <div class="columns col-12">
+                <button class="btn btn-primary  m-auto">
+                    <svg class="feather mr-1">
+                        <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
+                    </svg>
+                    En savoir plus
+                </button>
+            </div>
+        </a>
     </div>
+
 </div>
 <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
