--- a/assets_sample/views/parts/cartModal.html
+++ b/assets_sample/views/parts/cartModal.html
@@ -18,6 +18,6 @@
         <div>Total Panier : <span class="value cartPrice"></span> €</div>
     </div>
     <div class="modal-footer mt-2 p-2">
-        <a class="purchaseButton" href="#commander"><button class="btn">Passer commande</button></a>
+        <a class="purchaseButton" href="#purchase"><button class="btn">Passer commande</button></a>
     </div>
 </div>
