--- a/assets/views/pages/servicedelivraison.html
+++ b/assets/views/pages/servicedelivraison.html
@@ -1,4 +1,4 @@
-<div id="livraison" class="container  pt-2 pb-2">
+<div id="livraison" class="container col-11 m-auto py-2">
 
     <h1>Notre service de livraison</h1>
     <div class="edito mb-2">
