--- a/assets/views/pages/config_persienne.html
+++ b/assets/views/pages/config_persienne.html
@@ -133,19 +133,81 @@
                     </div>
 
                     <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
+                    <div id="couleur" class="column columns col-12">
+                        <div class="radioGroup form-group column ">
+                            <label class="form-label">Couleur standard</label>
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-7016" name="couleur" value="ral-7016"
+                                       checked="checked">
+                                <i class="form-icon"></i><span class="label-name ral-7016 ">RAL-7016</span>
+                            </label>
 
-                    <div class="columns col-12">
-                        <div class="btn-moreinfo mt-2 pt-2 column col-5 col-mx-auto" id="btnadd">
-                            <svg class="feather">
-                                <use xlink:href="assets/images/feather-sprite.svg#shopping-cart"/>
-                            </svg>
-                            <span class="ml-2 mr-2">Ajouter au panier</span></div>
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-9010" name="couleur" value="ral-9010">
+                                <i class="form-icon"></i><span class="label-name ral-9010">RAL-9010</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-7006" name="couleur" value="ral-7006">
+                                <i class="form-icon"></i><span class="label-name ral-7006">RAL-7006</span>
+                            </label>
+                        </div>
+                        <div class="radioGroup form-group column ">
+                            <label class="form-label">Couleur non standard</label>
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-3004" name="couleur" value="ral-3004">
+                                <i class="form-icon"></i><span class="label-name ral-3004">RAL-3004</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-6005" name="couleur" value="ral-6005">
+                                <i class="form-icon"></i><span class="label-name ral-6005">RAL-6005</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-7039" name="couleur" value="ral-7039">
+                                <i class="form-icon"></i><span class="label-name ral-7039">RAL-7039</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-8011" name="couleur" value="ral-8011">
+                                <i class="form-icon"></i><span class="label-name ral-8011">RAL-8011</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-9005" name="couleur" value="ral-9005">
+                                <i class="form-icon"></i><span class="label-name ral-9005">RAL-9005</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-9006" name="couleur" value="ral-9006">
+                                <i class="form-icon"></i><span class="label-name ral-9006">RAL-9006</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-5003" name="couleur" value="ral-5003">
+                                <i class="form-icon"></i><span class="label-name ral-5003">RAL-5003</span>
+                            </label>
+
+                            <label class="form-radio form-inline">
+                                <input type="radio" data-name="RAL-7004" name="couleur" value="ral-7004">
+                                <i class="form-icon"></i><span class="label-name ral-7004">RAL-7004</span>
+                            </label>
+                        </div>
                     </div>
-                </form>
-
-
             </div>
+            <div class="columns col-12">
+                <div class="btn-moreinfo mt-2 pt-2 column col-5 col-mx-auto" id="btnadd">
+                    <svg class="feather">
+                        <use xlink:href="assets/images/feather-sprite.svg#shopping-cart"/>
+                    </svg>
+                    <span class="ml-2 mr-2">Ajouter au panier</span></div>
+            </div>
+            </form>
+
+
         </div>
     </div>
+</div>
 </div>
 
