--- a/assets/views/pages/contact.html
+++ b/assets/views/pages/contact.html
@@ -7,10 +7,10 @@
     <div class="col-10 col-md-12 p-centered">
         <form id="contact">
             <div class="col-12 m-auto columns">
-                <div class="col-6 column border">
+                <div class="col-6 column border col-md-12 col-sm-12">
                     <div id="mapid"></div>
                 </div>
-                <div class=" col-6 m-auto column">
+                <div class=" col-6  col-md-12 col-sm-12 m-auto column">
 
                     <div class="pb-2 pt-2 "><input class="form-input col-12" type="email" id="mail"
                                                    placeholder="Votre adresse Email"></div>
@@ -26,11 +26,11 @@
             <div class="divider mt-2 mb-2 pt-2 "></div>
 
             <div class="columns col-12">
-                <button class="btn btn-primary mb-2 pb-2 column col-2 col-ml-auto" id="btnadd">
+                <div class="btn-moreinfo mb-2 pb-2 column col-2 col-ml-auto col-sm-6 col-md-6" id="btnadd">
                     <svg class="feather ml-2 mr-1">
                         <use xlink:href="assets/images/feather-sprite.svg#send"/>
                     </svg>
-                    <span class="ml-2 mr-2">Envoyer</span></button>
+                    <span class="ml-2 mr-2">Envoyer</span></div>
             </div>
         </form>
     </div>
