--- a/assets/views/pages/detail.html
+++ b/assets/views/pages/detail.html
@@ -2,7 +2,7 @@
     <div class="column col-12 my-2 py-2">
         <div class="columns">
             <div class="column mb-2">
-                <h1>Nos articles<sup><img class="pr-2 mr-2"src="assets/images/logofr.png" alt="" style="width: 45px;"></sup></h1>
+                <h1>Nos articles<sup><img class="pr-2 mr-2"src="assets/images/pastillenoir.png" alt="" style="width: 45px;"></sup></h1>
                 <div class="desc">Retrouvez l'intégralité de nos produits au détail...</div>
             </div>
         </div>
