--- a/assets/views/pages/home.html
+++ b/assets/views/pages/home.html
@@ -1,8 +1,8 @@
-<h1 class="my-2 py-2">Clôtures Françaises<sup><img class="pr-2 mr-2" src="assets/images/logofr.png" alt=""
+<h1 class="my-2 py-2">Clôtures Françaises<sup><img class="pr-2 mr-2" src="assets/images/pastillenoir.png" alt=""
                                                         style="width: 45px;"></sup></h1>
 <span class="h3 my-2">Bienvenue !</span>
 <div class="columns mt-2">
-    <div class="col-10 col-mx-auto my-2 py-2">
+    <div class="col-10 col-md-11 col-sm-12 col-mx-auto my-2 py-2">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper leo venenatis diam volutpat tempus.
         Nullam feugiat, leo at sagittis auctor, leo est dapibus risus, vitae ultricies sapien mauris ut turpis.
         Vestibulum
@@ -20,7 +20,7 @@
         Mauris
         ut quam massa. Vivamus posuere pulvinar lacus, at placerat turpis pretium vitae.
     </div>
-    <div class="col-10 col-mx-auto my-2 py-2">
+    <div class="col-10 col-md-11 col-sm-12 col-mx-auto my-2 py-2">
         Mauris pretium leo nec vulputate posuere. Nunc tristique nisl purus, nec scelerisque sem dignissim ac. Ut sed
         lorem
         odio. Fusce luctus porta dolor vulputate fermentum. Donec mollis magna in mauris sodales, ac pharetra velit
@@ -32,7 +32,7 @@
         porttitor varius erat. Suspendisse sed leo justo. Duis vestibulum tortor et lobortis placerat. Suspendisse
         potenti.
     </div>
-    <div class="col-10 col-mx-auto my-2 py-2">
+    <div class="col-10 col-md-11 col-sm-12 col-mx-auto my-2 py-2">
         Mauris pretium leo nec vulputate posuere. Nunc tristique nisl purus, nec scelerisque sem dignissim ac. Ut sed
         lorem
         odio. Fusce luctus porta dolor vulputate fermentum. Donec mollis magna in mauris sodales, ac pharetra velit
