--- a/assets/views/pages/nos_clotures.html
+++ b/assets/views/pages/nos_clotures.html
@@ -2,7 +2,7 @@
     <div class="my-2 py-2">
         <div>
             <div class="mb-2">
-                <h1>Nos kits de clôtures<sup><img class="pr-2 mr-2" src="assets/images/logofr.png" alt=""
+                <h1>Nos kits de clôtures<sup><img class="pr-2 mr-2" src="assets/images/pastillenoir.png" alt=""
                                                   style="width: 45px;"></sup></h1>
                 <div class="desc">Découvrez notre configurateur en ligne...</div>
             </div>
@@ -10,10 +10,10 @@
     </div>
 
 
-    <div class="columns col-12 m-3 p-3 justify-around">
+    <div class="columns col-12 col-md-12 col-sm-12 m-auto p-2 justify-around">
 
 
-        <a href="#config-persienne" class="col-3 col-md-6 col-sm-12 m-2 p-3 linkclot my-card">
+        <a href="#config-persienne" class="col-3 col-md-5 col-sm-12 m-2 p-3 linkclot my-card">
             <div class="h2 productName">Lame persienne</div>
             <div class="h4 productPrice mb-2"><small>A partir de</small> 57.40 €</div>
             <img src="assets/images/cloture-aluminium-lame-persienne.png"
@@ -28,7 +28,7 @@
 
         </a>
 <!--        <div class="divider-vert"></div>-->
-        <a href="#config-lame-large" class="col-3 col-md-6 col-sm-12 m-2 p-3 linkclot my-card">
+        <a href="#config-lame-large" class="col-3 col-md-5 col-sm-12 m-2 p-3 linkclot my-card">
             <div class="h2 productName ">Lame large</div>
             <div class="h4 productPrice mb-2 "><small>A partir de</small> 70.30 €</div>
             <img src="assets/images/cloture-aluminium-lame-large.png"
@@ -41,7 +41,7 @@
             </div>
         </a>
 <!--        <div class="divider-vert"></div>-->
-        <a href="#config-claire-voie" class="col-3 col-md-6 col-sm-12 m-2 p-3 linkclot my-card">
+        <a href="#config-claire-voie" class="col-3 col-md-5 col-sm-12 m-2 p-3 linkclot my-card">
             <div class="h2 productName ">Claire voie</div>
             <div class="h4 productPrice mb-2 "><small>A partir de</small> 55.65 €</div>
             <img src="assets/images/cloture-aluminium-lame-pleine.png"
