--- a/assets/views/parts/cartModal.html
+++ b/assets/views/parts/cartModal.html
@@ -4,7 +4,7 @@
         <tr>
             <th class="refLabel">Reference</th>
             <th>Produit</th>
-            <th class="priceLabel">Prix à l'unité</th>
+            <th class="priceLabel text-center" >Prix à l'unité TTC</th>
             <th>Quantité</th>
             <th>Total</th>
             <th></th>
