--- a/assets/views/pages/aidealapose.html
+++ b/assets/views/pages/aidealapose.html
@@ -1,9 +1,9 @@
 <h1 class="my-2 py-2">Besoin d'aide ?</h1>
 <div class="h3 my-4">Nos professionnels vous fournisse une notice complète d'installation !</div>
-<div class="columns col-10 col-mx-auto my-4">
-    <div class="column col-mx-auto"><img src="assets/images/aucune-image.png"></div>
-    <div class="divider-vert"></div>
-    <div class="column col-mx-auto">
+<div class="columns col-10 col-sm-auto col-mx-auto my-4 col-md-auto">
+    <div class="column col-mx-auto col-md-auto"><img src="assets/images/aucune-image.png"></div>
+    <div class="divider-vert "></div>
+    <div class="column col-mx-auto col-sm-auto col-md-auto">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper leo venenatis diam volutpat tempus.
         Nullam feugiat, leo at sagittis auctor, leo est dapibus risus, vitae ultricies sapien mauris ut turpis.</br>
         Vestibulum
