--- a/assets/views/parts/cartRow.html
+++ b/assets/views/parts/cartRow.html
@@ -2,7 +2,7 @@
     <tr>
         <td class="refLabel" data-label="Ref"><div class="value"></div></td>
         <td class="productLabel" data-label="Produit"><div class="value"></div></td>
-        <td class="priceLabel" data-label="Prix à l'unité"><span class="value"></span></td>
+        <td class="priceLabel text-center" data-label="Prix à l'unité"><span class="value"></span></td>
         <td class="qtyLabel" data-label="Quantité">
         <span class="iconPointer minusProduct">
             <svg class="feather"><use xlink:href="assets/images/feather-sprite.svg#minus"/></svg>
