--- a/assets/views/parts/footer.html
+++ b/assets/views/parts/footer.html
@@ -1,7 +1,7 @@
 <footer>
-    <div class="col-8 footer mt-1 m-auto">
+    <div class="col-8 col-sm-12 col-md-12 footer mt-1 m-auto">
         <div class="columns">
-            <div class="column  col-4 col-sm-auto col-mx-auto">
+            <div class="column  col-4  col-md-auto col-sm-12 col-mx-auto">
                 <div class="h3">Nous contacter</div>
                 <ul class="unstyled mt-4">
                     <li class="mt-2 mb-2 text-left">
@@ -42,7 +42,7 @@
 
 
             </div>
-            <div class="column text-center col-4 col-sm-auto col-mx-auto">
+            <div class="column col-4 col-md-auto col-sm-12 col-mx-auto">
                 <div class="h3">Découvrez notre autre site</div>
 
                 <ul class="unstyled mt-2">
@@ -55,8 +55,7 @@
 
             </div>
         </div>
-        <div class="footerbottom text-center"> Tous droits réservés © 2020 Clotures Françaises Une marque appartenant au groupe
-            Coprometal.
+        <div class="footerbottom text-center"> Tous droits réservés © Clotures Françaises
         </div>
     </div>
 
