--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -1,4 +1,4 @@
-$mycolor: #333333;
+$mycolor: #000000;
 $red: #EE0000;
 $none: none;
 $btopcolor: 0.05rem solid $mycolor;
@@ -15,11 +15,13 @@ $btopcolor: 0.05rem solid $mycolor;
   font-family: "questrial";
   src: url('assets/font/Questrial-Regular.ttf');
 }
+
 //style menu
 .mymenu {
   letter-spacing: 0.5px;
   font-size: 20px;
 }
+
 .navbar {
   background: white;
 }
@@ -28,10 +30,13 @@ $btopcolor: 0.05rem solid $mycolor;
 a {
   position: relative;
   text-decoration: none;
+
+
   &:hover {
     text-decoration: none;
   }
 }
+
 a:after {
   content: '';
   position: absolute;
@@ -42,20 +47,31 @@ a:after {
   background: transparent;
   color: $red;
 }
+
 .link {
   font-weight: 200;
   text-decoration: none !important;
   border: 0.05rem solid transparent;
   margin-left: 0.4rem !important;
   margin-right: 0.4rem !important;
+  color:$mycolor;
+  &:focus,
+  &:active,
+  &:visited,
+  &.active {
+  color: $mycolor;
+  }
 
 }
+
 .link:hover {
   color: $red;
 }
+
 .link:after {
   transition: width 0.4s ease, background-color 0.4s ease, left 0.4s ease;
 }
+
 .link:hover:after {
   width: 100%;
   left: 0;
@@ -83,14 +99,17 @@ body {
   color: $mycolor;
   font-family: "questrial";
 }
+
 html {
   background: #E9E9E9;
 }
+
 .mygreybox {
   box-shadow: 0 0 22px rgba(0, 0, 0, .1);
   background: white;
   border-radius: 0.1rem;
 }
+
 .unstyled {
   list-style: $none;
 }
@@ -99,6 +118,7 @@ html {
 .divider {
   border-top: $btopcolor;
 }
+
 .divider-vert {
   &::before {
     border-left: $btopcolor;
@@ -133,30 +153,29 @@ html {
     border: 1px solid #bb0000;
   }
 }
-//couleur cloture
-#couleur .form-radio .label-name {
-  width: 45px;
-  height: 45px;
-  display: inline-block;
-  font-size: 0;
-  cursor: pointer;
-  border: solid 1px #000;
 
-}
-#couleur .form-radio{
-padding: 0;
-}
-.form-radio .form-icon {
-display: none;
-  &:checked{
-    #couleur .form-radio .label-name {
-      border: solid 2px #ff2400;
-    }
+//couleur cloture
+#couleur .form-radio {
+  padding: 0;
+  .label-name {
+    width: 45px;
+    height: 45px;
+    display: inline-block;
+    font-size: 0;
+    cursor: pointer;
+    border: solid 1px $mycolor;
+  }
+  .form-icon {
+    display: none;
   }
 }
-//#couleur .form-radio .label-name .ralSelect {
-//  border: solid 2px #ff2400;
-//}
+.form-radio input:checked + .label-name{
+  border: solid 2px #ff2400;
+}
+
+#couleur .form-radio .label-name.ralselect {
+  border: solid 2px #ff2400;
+}
 
 //Card
 .my-card {
@@ -186,6 +205,7 @@ display: none;
   &.active {
     color: $mycolor;
   }
+
   &:hover {
     text-decoration: underline;
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
@@ -202,9 +222,11 @@ display: none;
     color: #333333;
   }
 }
+
 .textarea {
   resize: $none;
 }
+
 #mapid {
   height: 382px;
 }
