--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Core colors
-$primary-color: #333333 !default;
+$primary-color: #000000 !default;
 $primary-color-dark: darken($primary-color, 3%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
 $secondary-color: lighten($primary-color, 37.5%) !default;
@@ -11,7 +11,7 @@ $secondary-color-dark: darken($secondary-color, 3%) !default;
 $secondary-color-light: lighten($secondary-color, 3%) !default;
 
 // Gray colors
-$dark-color: #1b1c1d !default;
+$dark-color: #000000 !default;
 $light-color: #f8fafc !default;
 $gray-color: lighten($dark-color, 55%) !default;
 $gray-color-dark: darken($gray-color, 30%) !default;
