--- a/assets/views/pages/config_persienne.html
+++ b/assets/views/pages/config_persienne.html
@@ -70,7 +70,6 @@
                         </div>
                     </div>
 
-
                     <div id="dimension" class="column col-6">
                         <label class="form-label">Dimension</label>
                         <div class="form-group">
@@ -133,81 +132,96 @@
                     </div>
 
                     <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
+
                     <div id="couleur" class="column columns col-12">
                         <div class="radioGroup form-group column ">
                             <label class="form-label">Couleur standard</label>
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-7016" name="couleur" value="ral-7016"
-                                       checked="checked">
-                                <i class="form-icon"></i><span class="label-name ral-7016 ">RAL-7016</span>
+                                <input type="radio" data-name="ral-7016" data-ref="CFCS" name="couleur" value="ral-7016"
+                                       data-std="std" checked="checked">
+                                <i class="form-icon"></i><span class="label-name ral-7016">ral-7016</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-9010" name="couleur" value="ral-9010">
-                                <i class="form-icon"></i><span class="label-name ral-9010">RAL-9010</span>
+                                <input type="radio" data-name="ral-9010" data-ref="CFCS" name="couleur" value="ral-9010"
+                                       data-std="std">
+                                <i class="form-icon"></i><span class="label-name ral-9010">ral-9010</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-7006" name="couleur" value="ral-7006">
-                                <i class="form-icon"></i><span class="label-name ral-7006">RAL-7006</span>
+                                <input type="radio" data-name="ral-7006" data-ref="CFCS" name="couleur" value="ral-7006"
+                                       data-std="std">
+                                <i class="form-icon"></i><span class="label-name ral-7006">ral-7006</span>
                             </label>
                         </div>
                         <div class="radioGroup form-group column ">
                             <label class="form-label">Couleur non standard</label>
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-3004" name="couleur" value="ral-3004">
-                                <i class="form-icon"></i><span class="label-name ral-3004">RAL-3004</span>
+                                <input type="radio" data-name="ral-3004" data-ref="CFCNS" name="couleur"
+                                       value="ral-3004" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-3004">ral-3004</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-6005" name="couleur" value="ral-6005">
-                                <i class="form-icon"></i><span class="label-name ral-6005">RAL-6005</span>
+                                <input type="radio" data-name="ral-6005" data-ref="CFCNS" name="couleur"
+                                       value="ral-6005" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-6005">ral-6005</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-7039" name="couleur" value="ral-7039">
-                                <i class="form-icon"></i><span class="label-name ral-7039">RAL-7039</span>
+                                <input type="radio" data-name="ral-7039" data-ref="CFCNS" name="couleur"
+                                       value="ral-7039" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-7039">ral-7039</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-8011" name="couleur" value="ral-8011">
-                                <i class="form-icon"></i><span class="label-name ral-8011">RAL-8011</span>
+                                <input type="radio" data-name="ral-8011" data-ref="CFCNS" name="couleur"
+                                       value="ral-8011" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-8011">ral-8011</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-9005" name="couleur" value="ral-9005">
-                                <i class="form-icon"></i><span class="label-name ral-9005">RAL-9005</span>
+                                <input type="radio" data-name="ral-9005" data-ref="CFCNS" name="couleur"
+                                       value="ral-9005" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-9005">ral-9005</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-9006" name="couleur" value="ral-9006">
-                                <i class="form-icon"></i><span class="label-name ral-9006">RAL-9006</span>
+                                <input type="radio" data-name="ral-9006" data-ref="CFCNS" name="couleur"
+                                       value="ral-9006" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-9006">ral-9006</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-5003" name="couleur" value="ral-5003">
-                                <i class="form-icon"></i><span class="label-name ral-5003">RAL-5003</span>
+                                <input type="radio" data-name="ral-5003" data-ref="CFCNS" name="couleur"
+                                       value="ral-5003" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-5003">ral-5003</span>
                             </label>
 
                             <label class="form-radio form-inline">
-                                <input type="radio" data-name="RAL-7004" name="couleur" value="ral-7004">
-                                <i class="form-icon"></i><span class="label-name ral-7004">RAL-7004</span>
+                                <input type="radio" data-name="ral-7004" data-ref="CFCNS" name="couleur"
+                                       value="ral-7004" data-std="nstd">
+                                <i class="form-icon"></i><span class="label-name ral-7004">ral-7004</span>
                             </label>
                         </div>
                     </div>
-            </div>
-            <div class="columns col-12">
-                <div class="btn-moreinfo mt-2 pt-2 column col-5 col-mx-auto" id="btnadd">
-                    <svg class="feather">
-                        <use xlink:href="assets/images/feather-sprite.svg#shopping-cart"/>
-                    </svg>
-                    <span class="ml-2 mr-2">Ajouter au panier</span></div>
-            </div>
-            </form>
 
+                    <div class="columns col-12">
+                        <div class="btn-moreinfo mt-2 pt-2 column col-5 col-mx-auto" id="btnadd">
+                            <svg class="feather">
+                                <use xlink:href="assets/images/feather-sprite.svg#shopping-cart"/>
+                            </svg>
+                            <span class="ml-2 mr-2">Ajouter au panier</span>
+                        </div>
+                    </div>
+                </form>
 
+            </div>
         </div>
     </div>
 </div>
-</div>
+<div class="divider my-4"></div>
+
+
+
 
